--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         <div class="cards">	
             <div class="cards-row">
                 <div class="card">
-                    <img class="card-img" src="C:\Users\sofi1\OneDrive\Рабочий стол\mycat.jpg">	
+                    <img class="card-img" src="images/Vasiliy.jpg">	
                     <h3 class="card-title">Буйная кошка Коля</h3>
                     <div class="card-text">Ищет буйных хозяев</div>
                     <div class="card-button">
